--- a/tippy/Base.lproj/Main.storyboard
+++ b/tippy/Base.lproj/Main.storyboard
@@ -70,9 +70,9 @@
                                 </connections>
                             </segmentedControl>
                             <view contentMode="scaleToFill" id="zOP-7W-2vT">
-                                <rect key="frame" x="10" y="211" width="300" height="10"/>
+                                <rect key="frame" x="10" y="217" width="300" height="2"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </view>
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" id="cxg-Zx-bei">
                                 <rect key="frame" x="194" y="174" width="94" height="29"/>
@@ -200,4 +200,5 @@
             <point key="canvasLocation" x="270" y="398"/>
         </scene>
     </scenes>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
 </document>
